# beanstalkd-win

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  beanstalkd.spec  beanstalkd.vcproj  compile  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  conn.c  darwin.c  dat.h  dat_w32.h  depcomp  file.c  job.c  main.c  missing  ms.c  net.c  prot.c  sd-daemon.c  serv.c  time.c  tube.c  unistd.h  util.c  walg.c  windows.c  windows_iocp.c
.deps/: conn.Po  file.Po  heap.Po  job.Po  main.Po  ms.Po  net.Po  primes.Po  prot.Po  sd-daemon.Po  serv.Po  testheap.Po  testjobs.Po  testserv.Po  testutil.Po  time.Po  tube.Po  util.Po  walg.Po  windows.Po
adm/launchd/: beanstalkd.plist
adm/systemd/: beanstalkd.service  beanstalkd.socket
adm/upstart/: beanstalkd.conf
ct/: .gitignore
sys/: uio.h
